[gd_scene format=3 uid="uid://8dxh22cv11vh"]

[ext_resource type="Script" path="res://autoload/LoadingScreen.gd" id="1"]

[node name="LoadingScreen" type="Control" unique_id=1379054321]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=1141786384]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=943773865]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1452912974]
layout_mode = 2
theme_override_constants/separation = 50

[node name="RoundLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=432953501]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ROUND 1"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1001094432]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "3"
horizontal_alignment = 1

[node name="MatchInfo" type="VBoxContainer" parent="CenterContainer/VBoxContainer" unique_id=1321303650]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VS" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo" unique_id=1132573824]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VS"
horizontal_alignment = 1

[node name="PlayersContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MatchInfo" unique_id=1531928013]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Player1Info" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer" unique_id=1194812135]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player1Info" unique_id=1285860662]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player 1"
horizontal_alignment = 1

[node name="Character" type="ColorRect" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player1Info" unique_id=1241130873]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
color = Color(0.3, 0.6, 1, 1)

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player1Info/Character" unique_id=1511968264]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "BLUE"
horizontal_alignment = 1

[node name="Wins" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player1Info" unique_id=909678938]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wins: 0"
horizontal_alignment = 1

[node name="Player2Info" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer" unique_id=1341540210]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player2Info" unique_id=1331540137]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player 2"
horizontal_alignment = 1

[node name="Character" type="ColorRect" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player2Info" unique_id=1355977507]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
color = Color(1, 0.3, 0.3, 1)

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player2Info/Character" unique_id=1803980927]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "RED"
horizontal_alignment = 1

[node name="Wins" type="Label" parent="CenterContainer/VBoxContainer/MatchInfo/PlayersContainer/Player2Info" unique_id=105441682]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Wins: 0"
horizontal_alignment = 1

[node name="CountdownTimer" type="Timer" parent="." unique_id=500361319]
autostart = true

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
